feat(DATA-1394): upgrade dependencies and java version