@@ -17,14 +17,14 @@
 package no.rutebanken.marduk.routes.chouette.json;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
 import java.io.StringReader;
 import java.util.stream.Collectors;
 
 import static org.junit.Assert.assertEquals;
 
-public class JobResponseTest {
+class JobResponseTest {
 
     String inputJson = "{\"id\":130,\"referential\":\"tds\",\"action\":\"importer\",\"type\":\"gtfs\"," +
             "\"created\":1450177618732,\"updated\":1450177618732,\"status\":\"SCHEDULED\"," +
@@ -41,13 +41,13 @@ public class JobResponseTest {
             "\"organisation_name\":\"Rutebanken\",\"referential_name\":\"testDS\",\"no_save\":false,\"clean_repository\":false}}";
 
     @Test
-    public void createInputJson() throws Exception {
+    void createInputJson() throws Exception {
         ObjectMapper mapper = new ObjectMapper();
         StringReader reader = new StringReader(inputJson);
         JobResponseWithLinks jobResponse = mapper.readValue(reader, JobResponseWithLinks.class);
         assertEquals(Status.SCHEDULED, jobResponse.status);
         assertEquals("http://chouette:8080/chouette_iev/referentials/tds/data/130/parameters.json",
-                jobResponse.links.stream().filter(li -> li.rel.equals("parameters")).collect(Collectors.toList()).get(0).href);
+                jobResponse.links.stream().filter(li -> li.rel.equals("parameters")).collect(Collectors.toList()).getFirst().href);
     }
 
 }
